fix: Db fix